--- a/controller/templates/base/css/base.css
+++ b/controller/templates/base/css/base.css
@@ -460,3 +460,8 @@ p.message {
 th.yui-dt-sortable div{
 	background: url(../../../../phpgwapi/js/yahoo/assets/skins/sam/sprite.png) repeat-x scroll 0pt -100px rgb(216, 216, 218);
 }
+
+dd ol li {
+	list-style: decimal;
+	list-style-position: inside;
+}
